kubernetes/firecrawl/0-base.yml
apiVersion: v1
kind: Namespace
metadata:
  name: firecrawl
  labels:
    istio.io/dataplane-mode: ambient
