kubernetes/firecrawl/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firecrawl-worker
  namespace: firecrawl
  labels:
    app: firecrawl-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firecrawl-worker
  template:
    metadata:
      labels:
        app: firecrawl-worker
    spec:
      containers:
        - name: firecrawl-worker
          image: ghcr.io/firecrawl/firecrawl:latest@sha256:477df3ce49f371683971a5f8de1428d94cab1e56dbb2d7c5730d1d409a829425
          command: ["node", "dist/src/services/queue-worker.js"]
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
