kubernetes/firecrawl/playwright.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firecrawl-playwright
  namespace: firecrawl
  labels:
    app: firecrawl-playwright
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firecrawl-playwright
  template:
    metadata:
      labels:
        app: firecrawl-playwright
    spec:
      containers:
        - name: playwright-service
          image: ghcr.io/firecrawl/playwright-service@sha256:47da52c036b55580d5d0812fa530eacfe03533ebad9449a50858ff697db04f71
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1.5Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: firecrawl-playwright
  namespace: firecrawl
spec:
  selector:
    app: firecrawl-playwright
  ports:
    - port: 3000
      targetPort: 3000
